--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This repository contains a set of community-generated functions, to serve as examples to base your own functions upon. If you're building out a new integration, or a custom piece of code that you want Segment to run, use this repo as the set of examples.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --verbose"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "xml": "1.0.1"
   },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "nock": "^11.3.5"
   }
 }
